# mayanfest-new

./: .gitignore  CMakeLists.txt  README.md  makefile  mkfs.myfs.cpp  myfs.cpp
CMake/: FindFUSE.cmake
integration/: IntegrationTest.py
presentation/: architecture.tex  beyond-basics.tex  challenges.tex  compile.sh  conclusion.tex  introduction.tex  performance-benchmark.tex  performance.py  performance.sh  plotter.py  presentation.aux  presentation.bbl  presentation.bib  presentation.blg  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.run.xml  presentation.tex  presentation.toc  run.sh  stats  stats.csv  stats.py  stats.txt  writestuff.py
src/: diskinterface.cpp  diskinterface.hpp  filesystem.cpp  filesystem.hpp  syscall.hpp
tests/: test-diskinterface.cpp  test-filesystem.cpp  test-main.cpp  test-mmap-file.cpp  test-syscall.cpp
